--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -11,7 +11,7 @@ site-image: 02.jpg
 # SEO settings
 title: Bela Blog
 description: A blog about Bela.
-url: "http://localhost:4000/"
+url: ""
 twitter_username: 
 default_img: 
 
