--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,10 @@
 # Site settings
 email: info@bela.io
+# TO TEST YOUR BUILD, uncomment this line:
+# baseurl: ""
+# ... and comment out this line:
 baseurl: "https://disastrid.github.io/bela_newBlog"
+# IMPORTANT! Before deploying, make sure you change them back so the github url is active. 
 imageurl: "/assets/images/"
 paginate: 10
 paginate_path: "/blog/page-:num"
