Added a post on analog synth, lightsaber plus a whole bunch of related of photos etc.

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 email: info@bela.io
-baseurl: "https://disastrid.github.io/bela_newBlog"
+baseurl: ""
 imageurl: "/assets/images/"
 paginate: 10
 paginate_path: "/blog/page-:num"
