--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -11,7 +11,7 @@ paginate_path: "/blog/page-:num"
 google_analytics: 
 # This is the image on the about page:
 about-image: main.jpg
-site-image: 02.jpg
+site-image: belaboard.jpg
 
 # SEO settings
 title: Bela Blog
