Updated content for D-Box and STEIM posts; edited my author info.

--- a/docs/_data/authors.yml
+++ b/docs/_data/authors.yml
@@ -24,7 +24,7 @@ andrew:
   github: apmcpherson
   twitter: InstrumentsLab
   email: andrew@bela.io
-  profile: And now for something completely different.
+  profile: Andrew is an instrument designer, composer and engineer. He is a Reader (Associate Professor) in the Centre for Digital Music at QMUL, where he leads the Augmented Instruments Laboratory.
   author-image: andrew.jpg
 giulio:
   name: Giulio Moro
