--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -8,7 +8,7 @@ baseurl: "https://disastrid.github.io/bela_newBlog"
 imageurl: "/assets/images/"
 paginate: 10
 paginate_path: "/blog/page-:num"
-google_analytics: 
+google_analytics: "UA-90171977-1"
 # This is the image on the about page:
 about-image: main.jpg
 site-image: belaboard.jpg
