--- a/docs/_data/authors.yml
+++ b/docs/_data/authors.yml
@@ -17,7 +17,7 @@ robert:
   github: roberthjack
   twitter: rjack0101
   email: robert@bela.io
-  profile: Robert likes making instruments.
+  profile: Robert is a musician and instrument designer. He is currently a doctoral candidate in the Augmented Instruments Lab at QMUL.
   author-image: robert.jpg
 andrew:
   name: Andrew McPherson
