Corrected mail icon

--- a/docs/_data/authors.yml
+++ b/docs/_data/authors.yml
@@ -2,7 +2,7 @@ astrid:
   name: Astrid Bin
   github: disastrid
   twitter: disastrid
-  profile: Astrid is a life sized human person.
+  profile: Astrid designs and build instruments in the Augmented Instruments Lab to understand how error can make better electronic music. She likes making things, percussion, and making percussion things.
   email: astrid@bela.io
   author-image: astrid.jpg
 someoneElse:
