Added aural fabrics post. Changed hacking category to projects.

--- a/docs/_data/authors.yml
+++ b/docs/_data/authors.yml
@@ -32,3 +32,9 @@ giulio:
   email: giulio@bela.io
   profile: Doing PhD while doing Bela while doing PhD while doing Bela.
   author-image: giulio.jpg
+alessia:
+  name: Alessia Milo
+  email: a.milo@qmul.ac.uk
+  twitter: alesmilo
+  profile: Alessia is an architect currently researching education in acoustics for architecture while pursuing her PhD in Media and Arts Technology, QMUL.
+  author-image: alessia.jpg
