Enabled website and creator's twitter accounts

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -17,7 +17,7 @@ site-image: belaboard.jpg
 title: Bela Blog
 description: A blog about Bela.
 url: ""
-twitter_username: 
+twitter_username: BelaPlatform
 default_img: 
 
 #Author names
