Added Jacob's post

--- a/docs/_data/authors.yml
+++ b/docs/_data/authors.yml
@@ -38,3 +38,9 @@ alessia:
   twitter: alesmilo
   profile: Alessia is an architect currently researching education in acoustics for architecture while pursuing her PhD in Media and Arts Technology, QMUL.
   author-image: alessia.jpg
+jacob:
+  name: Jacob Harrison
+  email: j.harrison@qmul.ac.uk
+  twitter: Jcb_H
+  profile: Jacob Harrison is currently doing a PhD in the Augmented Instruments Lab at QMUL. His research focuses on interface and instrument design, neurologic music therapy and accessible music technology.
+  author-image: Jacob-OHMI/jacob.jpg
