More typos and broken refs

--- a/docs/_data/authors.yml
+++ b/docs/_data/authors.yml
@@ -43,4 +43,4 @@ jacob:
   email: j.harrison@qmul.ac.uk
   twitter: Jcb_H
   profile: Jacob Harrison is currently doing a PhD in the Augmented Instruments Lab at QMUL. His research focuses on interface and instrument design, neurologic music therapy and accessible music technology.
-  author-image: Jacob-OHMI/jacob.jpg
+  author-image: jacob.jpg
