--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -16,7 +16,7 @@ site-image: belaboard.jpg
 # SEO settings
 title: Bela Blog
 description: A blog about Bela.
-url: ""
+url: "http://blog.bela.io"
 twitter_username: BelaPlatform
 default_img: 
 
