lovepad post draft, events category, jack author

--- a/docs/_data/authors.yml
+++ b/docs/_data/authors.yml
@@ -44,3 +44,8 @@ jacob:
   twitter: Jcb_H
   profile: Jacob Harrison is currently doing a PhD in the Augmented Instruments Lab at QMUL. His research focuses on interface and instrument design, neurologic music therapy and accessible music technology.
   author-image: jacob.jpg
+jack:
+  name: Jack Armitage
+  email: j.d.k.armitage@qmul.ac.uk
+  profile: Jack Armitage is currently doing a PhD in the Augmented Instruments Lab at QMUL. His research focuses on craft in digital musical instrument design.
+  author-image: jack.jpg
