--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -38,6 +38,7 @@ twitter: "http://www.twitter.com/"
 # Build settings
 include: ["_categories", "_authors"]
 exclude: ["_screenshots", "Gemfile", "Gemfile.lock"]
+include: [".htaccess"]
 markdown: kramdown
 permalink: /:year/:month/:day/:title/
 
