--- a/docs/_data/authors.yml
+++ b/docs/_data/authors.yml
@@ -49,3 +49,7 @@ jack:
   email: j.d.k.armitage@qmul.ac.uk
   profile: Jack Armitage is currently doing a PhD in the Augmented Instruments Lab at QMUL. His research focuses on craft in digital musical instrument design.
   author-image: jack.jpg
+dan:
+  name: Dan Moses
+  profile: Dan Moses is a multi-instrumentalist, musical instrument designer, DSP engineer and composer living in Oakland, CA. Dan has a Masters degree in Jazz Studies from New England Conservatory of Music and an MS in Electrical Engineering from Stanford University, and when he is not writing music with his band <a href="http://www.kilbanes.com/" target="_blank">The Kilbanes</a>, or creating new musical instruments, he works on DSP algorithms for Sennheiser.  Two of Dan's instruments, the Kalichord and Kalichord Strum, have been finalists at the Guthman Instrument Competition. <a href="http://www.dannymo.com" target="_blank">www.dannymo.com</a>
+  author-image: dan_beer.jpg
