--- a/docs/_data/authors.yml
+++ b/docs/_data/authors.yml
@@ -53,3 +53,10 @@ dan:
   name: Dan Moses
   profile: Dan Moses is a multi-instrumentalist, musical instrument designer, DSP engineer and composer living in Oakland, CA. Dan has a Masters degree in Jazz Studies from New England Conservatory of Music and an MS in Electrical Engineering from Stanford University, and when he is not writing music with his band <a href="http://www.kilbanes.com/" target="_blank">The Kilbanes</a>, or creating new musical instruments, he works on DSP algorithms for Sennheiser.  Two of Dan's instruments, the Kalichord and Kalichord Strum, have been finalists at the Guthman Instrument Competition. <a href="http://www.dannymo.com" target="_blank">www.dannymo.com</a>
   author-image: dan_beer.jpg
+bela:
+  name: Bela
+  github: BelaPlatform
+  twitter: BelaPlatform
+  email: info@bela.io
+  profile: Bela is an open-source platform for ultra-low latency audio and sensor processing. Find out more on our <a href="http://bela.io" target="_blank">website</a>, buy Bela at our <a href="http://shop.bela.io" target="_blank">shop</a>, follow us on <a href="https://twitter.com/BelaPlatform" target="_blank">twitter</a> or join our community and discuss this post on our <a href="http://forum.bela.io" target="_blank">forum</a>.
+  author-image: belaboard.jpg
