--- a/docs/_data/authors.yml
+++ b/docs/_data/authors.yml
@@ -61,6 +61,6 @@ bela:
   profile: Bela is an open-source platform for ultra-low latency audio and sensor processing. Find out more on our <a href="http://bela.io" target="_blank">website</a>, buy Bela at our <a href="http://shop.bela.io" target="_blank">shop</a>, follow us on <a href="https://twitter.com/BelaPlatform" target="_blank">twitter</a> or join our community and discuss this post on our <a href="http://forum.bela.io" target="_blank">forum</a>.
   author-image: Authors/belaboard.jpg
 eddmx:
-  name: Ed Upton
-  profile: <a href="http://www.dmxkrew.com" target="_blank">DMX Krew</a>. Text with links to be added here.
+  name: Ed DMX
+  profile: <a href="https://www.discogs.com/artist/983-DMX-Krew" target="_blank">DMX Krew</a>. Text with links to be added here.
   author-image: Authors/DMX_Krew.jpg
