--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,7 +3,7 @@ email: info@bela.io
 # TO TEST YOUR BUILD, uncomment this line:
 # baseurl: ""
 # ... and comment out this line:
-baseurl: "http://blog.bela.io"
+baseurl: "https://blog.bela.io"
 # IMPORTANT! Before deploying, make sure you change them back so the github url is active. 
 future: false
 imageurl: "/assets/images/"
