Updates to the Ed DMX post

--- a/docs/_data/authors.yml
+++ b/docs/_data/authors.yml
@@ -62,5 +62,5 @@ bela:
   author-image: Authors/belaboard.jpg
 eddmx:
   name: Ed DMX
-  profile: <a href="https://www.discogs.com/artist/983-DMX-Krew" target="_blank">DMX Krew</a>. Text with links to be added here.
+  profile: <a href="https://www.discogs.com/artist/983-DMX-Krew" target="_blank">DMX Krew</a>. DJ, producer and label owner from UK. He is the founder of Breakin' Records and Fresh Up Records.
   author-image: Authors/DMX_Krew.jpg
