Gemfile updated to address security alerts from Github- added version numbers for Jekyll and ffi gems

--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -5,4 +5,6 @@ group :jekyll_plugins do
   gem "jekyll-sitemap"
   gem "octopress-autoprefixer"
   gem "youtube"
+  gem "jekyll", ">= 3.6.3"
+  gem "ffi", ">= 1.9.24"
 end
