--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 email: info@bela.io
 # TO TEST YOUR BUILD, uncomment this line:
-# baseurl: ""
+#baseurl: ""
 # ... and comment out this line:
 baseurl: "https://blog.bela.io"
 # IMPORTANT! Before deploying, make sure you change them back so the github url is active. 
@@ -46,4 +46,4 @@ sass:
   style: compressed
 
 # Gems
-gems: [jekyll-paginate, jekyll-sitemap, octopress-autoprefixer, youtube]
+gems: [jekyll-paginate, jekyll-sitemap, octopress-autoprefixer, youtube, jekyll, ffi]
