Embelashed blog post.

--- a/docs/_data/authors.yml
+++ b/docs/_data/authors.yml
@@ -65,3 +65,7 @@ eddmx:
   name: Ed DMX
   profile: <a href="https://www.discogs.com/artist/983-DMX-Krew" target="_blank">DMX Krew</a>. DJ, producer and label owner from UK. He is the founder of Breakin' Records and Fresh Up Records.
   author-image: Authors/DMX_Krew.jpg
+BeckyStewart:
+  name: Becky Stewart
+  profile: Becky Stewart is a Lecturer in the <a href="https://www.imperial.ac.uk/design-engineering/" target="_blank">Dyson School of Design Engineering</a> at <a href="https://www.imperial.ac.uk/" target="_blank">Imperial College London</a>. Her research centres around how the body can be enhanced by embedded sensors and computing, particularly through textiles and audio.
+  author-image: Authors/becky-stewart.jpeg
