--- a/docs/_data/authors.yml
+++ b/docs/_data/authors.yml
@@ -69,3 +69,7 @@ BeckyStewart:
   name: Becky Stewart
   profile: Becky Stewart is a Lecturer in the <a href="https://www.imperial.ac.uk/design-engineering/" target="_blank">Dyson School of Design Engineering</a> at <a href="https://www.imperial.ac.uk/" target="_blank">Imperial College London</a>. Her research centres around how the body can be enhanced by embedded sensors and computing, particularly through textiles and audio.
   author-image: Authors/becky-stewart.jpeg
+timshaw:
+  name: Tim Shaw
+  profile: Tim Shaw is an artist working with sound, light and communication media. Presenting work through musical performances, installations and sound walks Tim is interested in how listening environments can be constructed or explored using a diverse range of techniques and technologies. He works with field recordings, electronics, video, modular synthesis, sound objects, self-made hardware and DIY software.
+  author-image: Authors/Credit_onTheNorway.JPG
